--- a/src/workerd/tests/BUILD.bazel
+++ b/src/workerd/tests/BUILD.bazel
@@ -22,7 +22,7 @@ wd_cc_library(
     deps = [
         "//src/workerd/io",
         "//src/workerd/jsg",
-        "//src/workerd/server",
+        "//src/workerd/server:workerd-api",
         "//src/workerd/util:autogate",
     ],
 )
