improve nodejs compat of OutgoingMessage

--- a/src/node/tsconfig.json
+++ b/src/node/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "lib": ["ESNext", "dom"],
+    "lib": ["ESNext", "dom", "Webworker.Iterable"],
     "alwaysStrict": true,
     "strict": true,
     "allowJs": true,
