--- a/src/node/tsconfig.json
+++ b/src/node/tsconfig.json
@@ -22,6 +22,7 @@
     "declaration": true,
     "types": ["@types/node"],
     "erasableSyntaxOnly": true,
+    "sourceMap": true,
     "paths": {
       "node:*": ["./*"],
       "node:assert/*": ["./*"],
