--- a/src/wpt/BUILD.bazel
+++ b/src/wpt/BUILD.bazel
@@ -1,5 +1,4 @@
-load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
-load("//:build/eslint_test.bzl", "eslint_test")
+load("//:build/wd_ts_project.bzl", "wd_ts_project")
 load("//:build/wpt_test.bzl", "wpt_test")
 
 srcs = glob(
@@ -13,28 +12,12 @@ filegroup(
     srcs = [file.removesuffix(".ts") + ".js" for file in glob(["harness/*.ts"])],
 )
 
-ts_project(
+wd_ts_project(
     name = "wpt-all@tsproject",
     srcs = srcs,
-    allow_js = True,
-    composite = True,
-    declaration = True,
-    source_map = True,
-    tsconfig = "tsconfig.json",
-    visibility = ["//visibility:public"],
-    deps = [
-        "//:node_modules/@types/node",
-    ],
-)
-
-eslint_test(
-    name = "wpt-all",
-    srcs = srcs,
-    data = [
-        "//:node_modules/@types/node",
-    ],
     eslintrc_json = "eslint.config.mjs",
     tsconfig_json = "tsconfig.json",
+    deps = ["//:node_modules/@types/node"],
 )
 
 wpt_test(
