--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -219,13 +219,13 @@ wd_test(
 sh_test(
     name = "process-stdio-sh-test",
     srcs = ["test_process_stdio.sh"],
-    args = ["$(location //src/workerd/server:workerd)"],
+    args = ["$(location //src/workerd/server:workerd_cross)"],
     data = [
         "process-stdio-nodejs-test.expected_stderr",
         "process-stdio-nodejs-test.expected_stdout",
         "process-stdio-nodejs-test.js",
         "process-stdio-nodejs-test.wd-test",
-        "//src/workerd/server:workerd",
+        "//src/workerd/server:workerd_cross",
     ],
 )
 
