[rust] throw handler
throws proper kj Excepion. Tests of
https://github.com/cloudflare/workerd-cxx/pull/4

--- a/src/rust/cxx-integration/BUILD.bazel
+++ b/src/rust/cxx-integration/BUILD.bazel
@@ -1,4 +1,5 @@
-load("//:build/wd_rust_crate.bzl", "rust_cxx_include", "wd_rust_crate")
+load("@workerd//:build/wd_cc_library.bzl", "wd_cc_library")
+load("@workerd//:build/wd_rust_crate.bzl", "rust_cxx_include", "wd_rust_crate")
 
 wd_rust_crate(
     name = "cxx-integration",
@@ -8,9 +9,24 @@ wd_rust_crate(
     cxx_bridge_src = "lib.rs",
     visibility = ["//visibility:public"],
     deps = [
+        ":bridge",
         "@crates_vendor//:tokio",
         "@crates_vendor//:tracing",
         "@workerd-cxx//kj-rs",
+    ],
+)
+
+wd_cc_library(
+    name = "bridge",
+    srcs = ["bridge.c++"],
+    hdrs = ["bridge.h"],
+    linkstatic = select({
+        "@platforms//os:windows": True,
+        "//conditions:default": False,
+    }),
+    deps = [
+        ":cxx-include",
+        "@capnp-cpp//src/kj",
     ],
 )
 
