[rust] do not generate cxx.h header
but consume it directly using bazel target.

follow up to https://github.com/cloudflare/workerd-cxx/pull/48

--- a/src/rust/python-parser/BUILD
+++ b/src/rust/python-parser/BUILD
@@ -1,5 +1,5 @@
 load("//:build/kj_test.bzl", "kj_test")
-load("//:build/wd_rust_crate.bzl", "rust_cxx_include", "wd_rust_crate")
+load("//:build/wd_rust_crate.bzl", "wd_rust_crate")
 
 wd_rust_crate(
     name = "python-parser",
