--- a/src/rust/cxx-integration/BUILD.bazel
+++ b/src/rust/cxx-integration/BUILD.bazel
@@ -1,4 +1,4 @@
-load("//:build/wd_rust_crate.bzl", "rust_cxx_include", "wd_rust_crate")
+load("//:build/wd_rust_crate.bzl", "wd_rust_crate")
 
 wd_rust_crate(
     name = "cxx-integration",
@@ -12,10 +12,4 @@ wd_rust_crate(
         "@crates_vendor//:tracing",
         "@workerd-cxx//kj-rs",
     ],
-)
-
-rust_cxx_include(
-    name = "cxx-include",
-    include_prefix = "rust",
-    visibility = ["//visibility:public"],
 )
