Sidecar tests: assign a random IP address to avoid clashing ports (#4592)

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -342,6 +342,7 @@ wd_test(
         "JS_STREAM_SERVER_PORT",
         "STREAM_WRAP_SERVER_PORT",
     ],
+    sidecar_randomize_ip = False,
 )
 
 wd_test(
