Add compat flag for the removal of `vendor` from Python sys.path

--- a/src/workerd/server/tests/python/BUILD.bazel
+++ b/src/workerd/server/tests/python/BUILD.bazel
@@ -74,3 +74,5 @@ py_wd_test("importable-env")
 py_wd_test("python-rpc")
 
 py_wd_test("workflow-entrypoint")
+
+py_wd_test("vendor_dir_compat_flag")
