--- a/deps/rust/crates/BUILD.capnp-0.21.4.bazel
+++ b/deps/rust/crates/BUILD.capnp-0.21.4.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "windows_sys",
+    name = "capnp",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,9 @@ rust_library(
         ],
     ),
     crate_features = [
-        "Win32",
-        "Win32_Foundation",
-        "Win32_Networking",
-        "Win32_Networking_WinSock",
-        "Win32_Security",
-        "Win32_Storage",
-        "Win32_Storage_FileSystem",
-        "Win32_System",
-        "Win32_System_IO",
-        "Win32_System_Pipes",
-        "Win32_System_SystemServices",
-        "Win32_System_Threading",
-        "Win32_System_WindowsProgramming",
+        "alloc",
         "default",
+        "std",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -51,13 +40,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=windows-sys",
+        "crate-name=capnp",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.52.0",
-    deps = [
-        "@crates_vendor__windows-targets-0.52.6//:windows_targets",
-    ],
+    version = "0.21.4",
 )
