--- a/deps/rust/crates/BUILD.capnpc-0.21.2.bazel
+++ b/deps/rust/crates/BUILD.capnpc-0.21.2.bazel
@@ -6,13 +6,16 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load(
+    "@rules_rust//rust:defs.bzl",
+    "rust_binary",
+    "rust_library",
+)
 
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "io_uring",
+    name = "capnpc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -36,22 +39,19 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=io-uring",
+        "crate-name=capnpc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.7.8",
+    version = "0.21.2",
     deps = [
-        "@crates_vendor__bitflags-2.9.1//:bitflags",
-        "@crates_vendor__cfg-if-1.0.1//:cfg_if",
-        "@crates_vendor__io-uring-0.7.8//:build_script_build",
-        "@crates_vendor__libc-0.2.174//:libc",
+        "@crates_vendor__capnp-0.21.4//:capnp",
     ],
 )
 
-cargo_build_script(
-    name = "_bs",
+rust_binary(
+    name = "capnpc-rust__bin",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -61,7 +61,6 @@ cargo_build_script(
         allow_empty = True,
         exclude = [
             "**/* *",
-            "**/*.rs",
             ".tmp_git_root/**/*",
             "BUILD",
             "BUILD.bazel",
@@ -69,9 +68,32 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_name = "build_script_build",
-    crate_root = "build.rs",
-    data = glob(
+    crate_root = "src/capnpc-rust.rs",
+    edition = "2021",
+    rustc_flags = [
+        "--cap-lints=allow",
+    ],
+    tags = [
+        "cargo-bazel",
+        "crate-name=capnpc",
+        "manual",
+        "noclippy",
+        "norustfmt",
+    ],
+    version = "0.21.2",
+    deps = [
+        ":capnpc",
+        "@crates_vendor__capnp-0.21.4//:capnp",
+    ],
+)
+
+rust_binary(
+    name = "capnpc-rust-bootstrap__bin",
+    srcs = glob(
+        include = ["**/*.rs"],
+        allow_empty = True,
+    ),
+    compile_data = glob(
         include = ["**"],
         allow_empty = True,
         exclude = [
@@ -83,24 +105,21 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_root = "src/capnpc-rust-bootstrap.rs",
     edition = "2021",
-    pkg_name = "io-uring",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=io-uring",
+        "crate-name=capnpc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.7.8",
-    visibility = ["//visibility:private"],
-)
-
-alias(
-    name = "build_script_build",
-    actual = ":_bs",
-    tags = ["manual"],
+    version = "0.21.2",
+    deps = [
+        ":capnpc",
+        "@crates_vendor__capnp-0.21.4//:capnp",
+    ],
 )
