--- a/deps/rust/crates/BUILD.io-uring-0.7.9.bazel
+++ b/deps/rust/crates/BUILD.io-uring-0.7.9.bazel
@@ -6,16 +6,13 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load(
-    "@rules_rust//rust:defs.bzl",
-    "rust_binary",
-    "rust_library",
-)
+load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "capnpc",
+    name = "io_uring",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -39,24 +36,42 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=capnpc",
+        "crate-name=io-uring",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.21.1",
+    version = "0.7.9",
     deps = [
-        "@crates_vendor__capnp-0.21.2//:capnp",
+        "@crates_vendor__bitflags-2.9.1//:bitflags",
+        "@crates_vendor__cfg-if-1.0.1//:cfg_if",
+        "@crates_vendor__io-uring-0.7.9//:build_script_build",
+        "@crates_vendor__libc-0.2.174//:libc",
     ],
 )
 
-rust_binary(
-    name = "capnpc-rust__bin",
+cargo_build_script(
+    name = "_bs",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
     ),
     compile_data = glob(
+        include = ["**"],
+        allow_empty = True,
+        exclude = [
+            "**/* *",
+            "**/*.rs",
+            ".tmp_git_root/**/*",
+            "BUILD",
+            "BUILD.bazel",
+            "WORKSPACE",
+            "WORKSPACE.bazel",
+        ],
+    ),
+    crate_name = "build_script_build",
+    crate_root = "build.rs",
+    data = glob(
         include = ["**"],
         allow_empty = True,
         exclude = [
@@ -68,58 +83,24 @@ rust_binary(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_root = "src/capnpc-rust.rs",
     edition = "2021",
+    pkg_name = "io-uring",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=capnpc",
+        "crate-name=io-uring",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.21.1",
-    deps = [
-        ":capnpc",
-        "@crates_vendor__capnp-0.21.2//:capnp",
-    ],
+    version = "0.7.9",
+    visibility = ["//visibility:private"],
 )
 
-rust_binary(
-    name = "capnpc-rust-bootstrap__bin",
-    srcs = glob(
-        include = ["**/*.rs"],
-        allow_empty = True,
-    ),
-    compile_data = glob(
-        include = ["**"],
-        allow_empty = True,
-        exclude = [
-            "**/* *",
-            ".tmp_git_root/**/*",
-            "BUILD",
-            "BUILD.bazel",
-            "WORKSPACE",
-            "WORKSPACE.bazel",
-        ],
-    ),
-    crate_root = "src/capnpc-rust-bootstrap.rs",
-    edition = "2021",
-    rustc_flags = [
-        "--cap-lints=allow",
-    ],
-    tags = [
-        "cargo-bazel",
-        "crate-name=capnpc",
-        "manual",
-        "noclippy",
-        "norustfmt",
-    ],
-    version = "0.21.1",
-    deps = [
-        ":capnpc",
-        "@crates_vendor__capnp-0.21.2//:capnp",
-    ],
+alias(
+    name = "build_script_build",
+    actual = ":_bs",
+    tags = ["manual"],
 )
