--- a/deps/rust/crates/BUILD.socket2-0.6.0.bazel
+++ b/deps/rust/crates/BUILD.socket2-0.6.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "capnp",
+    name = "socket2",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,9 +29,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "alloc",
-        "default",
-        "std",
+        "all",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -40,10 +38,28 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=capnp",
+        "crate-name=socket2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.21.2",
+    version = "0.6.0",
+    deps = select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.174//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.174//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.174//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:x86_64-pc-windows-msvc": [
+            "@crates_vendor__windows-sys-0.59.0//:windows_sys",  # cfg(windows)
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.174//:libc",  # cfg(unix)
+        ],
+        "//conditions:default": [],
+    }),
 )
