--- a/deps/rust/crates/BUILD.windows-sys-0.59.0.bazel
+++ b/deps/rust/crates/BUILD.windows-sys-0.59.0.bazel
@@ -47,6 +47,8 @@ rust_library(
         "Win32_System_IO",
         "Win32_System_Pipes",
         "Win32_System_SystemInformation",
+        "Win32_System_SystemServices",
+        "Win32_System_Threading",
         "Win32_System_WindowsProgramming",
         "default",
     ],
