reproduce v8 fast api bug

--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -282,6 +282,7 @@ wd_cc_library(
     src = f,
     local_defines = ["JSG_IMPLEMENTATION"],
     deps = [":jsg"],
+    size = "enormous",
 ) for f in glob(
     ["*-test.c++"],
     exclude = [
