Replace the obsolute internal compat flags module
Use the globalThis.Cloudflare instead.

--- a/src/node/tsconfig.json
+++ b/src/node/tsconfig.json
@@ -34,8 +34,7 @@
       "cloudflare-internal:http": ["./internal/http.d.ts"],
       "cloudflare-internal:sockets": ["./internal/sockets.d.ts"],
       "cloudflare-internal:workers": ["./internal/workers.d.ts"],
-      "cloudflare-internal:filesystem": ["./internal/filesystem.d.ts"],
-      "workerd:compatibility-flags": ["./internal/compatibility-flags.d.ts"]
+      "cloudflare-internal:filesystem": ["./internal/filesystem.d.ts"]
     }
   },
   "exclude": []
