--- a/src/cloudflare/tsconfig.json
+++ b/src/cloudflare/tsconfig.json
@@ -26,8 +26,7 @@
     ],
     "paths": {
       "cloudflare:*": ["./*"],
-      "cloudflare-internal:*": ["./internal/*"],
-      "workerd:compatibility-flags": ["./internal/compatibility-flags.d.ts"]
+      "cloudflare-internal:*": ["./internal/*"]
     }
   },
   "exclude": []
