address pr reviews

--- a/tools/base.tsconfig.json
+++ b/tools/base.tsconfig.json
@@ -20,6 +20,7 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "erasableSyntaxOnly": true,
+    "skipLibCheck": true,
     "types": []
   },
   "exclude": ["node_modules", "**/*.mjs"]
