--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on:
       - main
 
 concurrency:
-  # Cancel existing builds for the same PR.
+  # Cancel existing builds for the same P.
   # Otherwise, all other builds will be allowed to run through.
   group: test.yml-${{ github.event.pull_request.number || github.run_id }}
   cancel-in-progress: true
