add http incoming tests

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -388,6 +388,12 @@ wd_test(
     ],
 )
 
+wd_test(
+    src = "http-incoming-nodejs-test.wd-test",
+    args = ["--experimental"],
+    data = ["http-incoming-nodejs-test.js"],
+)
+
 js_binary(
     name = "http-client-nodejs-server",
     entry_point = "http-client-nodejs-server.js",
