--- a/deps/rust/crates/BUILD.cc-1.2.31.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.31.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "rustc_demangle",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,16 +29,19 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2015",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=rustc-demangle",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.1.25",
+    version = "1.2.31",
+    deps = [
+        "@crates_vendor__shlex-1.3.0//:shlex",
+    ],
 )
