--- a/deps/rust/crates/BUILD.rustc-demangle-0.1.26.bazel
+++ b/deps/rust/crates/BUILD.rustc-demangle-0.1.26.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "cc",
+    name = "rustc_demangle",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,19 +29,16 @@ rust_library(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=cc",
+        "crate-name=rustc-demangle",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.2.30",
-    deps = [
-        "@crates_vendor__shlex-1.3.0//:shlex",
-    ],
+    version = "0.1.26",
 )
