Python, tests: Minor improvements to vendored_py_wd_test

--- a/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
+++ b/src/workerd/server/tests/python/vendor_pkg_tests/BUILD
@@ -1,15 +1,5 @@
 load(":vendor_test.bzl", "vendored_py_wd_test")
 
-vendored_py_wd_test(
-    name = "fastapi_vendor_test",
-    main_py_file = "fastapi.py",
-    test_template = "fastapi_vendor.wd-test",
-    vendored_srcs_target_prefix = "@fastapi_src",
-)
+vendored_py_wd_test("fastapi")
 
-vendored_py_wd_test(
-    name = "beautifulsoup4_vendor_test",
-    main_py_file = "beautifulsoup4.py",
-    test_template = "beautifulsoup4_vendor.wd-test",
-    vendored_srcs_target_prefix = "@beautifulsoup4_src",
-)
+vendored_py_wd_test("beautifulsoup4")
