--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
   "name": "@cloudflare/workerd-root",
   "private": true,
-  "scripts": {
-    "lint": "eslint types/src",
-    "format": "prettier"
-  },
+  "scripts": {},
   "dependencies": {
     "prettier": "^3.6.2",
     "typescript": "5.8.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/node": "^24.0.10",
+    "@eslint/js": "^9.32.0",
+    "@types/node": "^24.2.0",
     "capnp-es": "0.0.11",
     "chrome-remote-interface": "^0.33.3",
-    "esbuild": "^0.25.5",
-    "eslint": "^9.30.1",
+    "esbuild": "^0.25.8",
+    "eslint": "^9.32.0",
     "expect-type": "^1.2.2",
-    "typescript-eslint": "^8.35.1"
+    "typescript-eslint": "^8.39.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild"
     ]
   },
-  "packageManager": "pnpm@10.12.4"
+  "packageManager": "pnpm@10.14.0"
 }
