fix perfetto build

--- a/.bazelrc
+++ b/.bazelrc
@@ -83,7 +83,6 @@ build:unix --per_file_copt=external/ssl@-fno-exceptions
 build:unix --per_file_copt=external/v8@-fno-exceptions
 build:unix --per_file_copt=external/ada-url@-fno-exceptions
 build:unix --per_file_copt=external/simdutf@-fno-exceptions
-build:unix --define=v8_use_perfetto=true
 build:windows --per_file_copt=external/abseil-cpp@/GX-
 build:windows --per_file_copt=external/protobuf@/GX-
 build:windows --per_file_copt=external/com_google_tcmalloc@/GX-
@@ -139,6 +138,10 @@ build:profile --strip=never
 
 # configuration used for performance benchmarking is the same as profiling for consistency
 build:benchmark --config=profile
+
+# perfetto tracing configuration
+build:perfetto --//:use_perfetto=True
+build:perfetto --copt=-DWORKERD_USE_PERFETTO
 
 # Define a debug config which is primarily intended for local development.
 build:debug -c dbg
