enable verbatimModuleSyntax tsconfig option

--- a/tools/base.tsconfig.json
+++ b/tools/base.tsconfig.json
@@ -24,6 +24,7 @@
     "composite": true,
     "moduleDetection": "force",
     "isolatedModules": true,
+    "verbatimModuleSyntax": true,
     "types": []
   },
   "exclude": ["node_modules", "**/*.mjs"]
