Small improvement to the httpServerHandler ergonomics
Since calling `listen()` on the node:http Server is largely
boilerplate, we can simplify the ergonomics by allowing the
user to pass the server directly into httpServerHandler and
having it call `listen()` for the user if it hasn't already
been called.

```js
import http from 'node:http';
import { httpServerHandler } from 'cloudflare:node';

const server = http.createServer((req, res) => {
  res.end('hello world');
});

export default httpServerHandler(server);
```

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -533,6 +533,12 @@ wd_test(
     data = ["os-test.js"],
 )
 
+wd_test(
+    src = "http-server-nodejs-global-test.wd-test",
+    args = ["--experimental"],
+    data = ["http-server-nodejs-global-test.js"],
+)
+
 js_binary(
     name = "sidecar-supervisor",
     entry_point = "sidecar-supervisor.mjs",
