--- a/deps/rust/crates/BUILD.clap_builder-4.5.43.bazel
+++ b/deps/rust/crates/BUILD.clap_builder-4.5.43.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "slab",
+    name = "clap_builder",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,20 +29,24 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
+        "help",
         "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=slab",
+        "crate-name=clap_builder",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.4.10",
+    version = "4.5.43",
+    deps = [
+        "@crates_vendor__anstyle-1.0.11//:anstyle",
+        "@crates_vendor__clap_lex-0.7.5//:clap_lex",
+    ],
 )
