--- a/deps/rust/crates/BUILD.scratch-1.0.9.bazel
+++ b/deps/rust/crates/BUILD.scratch-1.0.9.bazel
@@ -7,12 +7,12 @@
 ###############################################################################
 
 load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "rustversion",
+rust_library(
+    name = "scratch",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,20 +30,20 @@ rust_proc_macro(
         ],
     ),
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2015",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=rustversion",
+        "crate-name=scratch",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.21",
+    version = "1.0.9",
     deps = [
-        "@crates_vendor__rustversion-1.0.21//:build_script_build",
+        "@crates_vendor__scratch-1.0.9//:build_script_build",
     ],
 )
 
@@ -67,7 +67,7 @@ cargo_build_script(
         ],
     ),
     crate_name = "build_script_build",
-    crate_root = "build/build.rs",
+    crate_root = "build.rs",
     data = glob(
         include = ["**"],
         allow_empty = True,
@@ -80,19 +80,19 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    edition = "2018",
-    pkg_name = "rustversion",
+    edition = "2015",
+    pkg_name = "scratch",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=rustversion",
+        "crate-name=scratch",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.21",
+    version = "1.0.9",
     visibility = ["//visibility:private"],
 )
 
