--- a/deps/rust/crates/BUILD.slab-0.4.11.bazel
+++ b/deps/rust/crates/BUILD.slab-0.4.11.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "hashbrown",
+    name = "slab",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,29 +29,20 @@ rust_library(
         ],
     ),
     crate_features = [
-        "allocator-api2",
         "default",
-        "default-hasher",
-        "equivalent",
-        "inline-more",
-        "raw-entry",
+        "std",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=hashbrown",
+        "crate-name=slab",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.15.4",
-    deps = [
-        "@crates_vendor__allocator-api2-0.2.21//:allocator_api2",
-        "@crates_vendor__equivalent-1.0.2//:equivalent",
-        "@crates_vendor__foldhash-0.1.5//:foldhash",
-    ],
+    version = "0.4.11",
 )
