--- a/src/workerd/server/tests/python/BUILD.bazel
+++ b/src/workerd/server/tests/python/BUILD.bazel
@@ -1,6 +1,5 @@
 load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
-load("//:build/python_metadata.bzl", "BUNDLE_VERSION_INFO", "PYTHON_IMPORTS_TO_TEST", "PYTHON_LOCKFILES")
-load("//src/workerd/server/tests/python:import_tests.bzl", "gen_import_tests")
+load("//src/workerd/server/tests/python:import_tests.bzl", "gen_import_tests", "gen_rust_import_tests")
 load("//src/workerd/server/tests/python:py_wd_test.bzl", "py_wd_test")
 
 # pyodide_dev.capnp.bin represents a custom pyodide version "dev" that is generated
@@ -30,22 +29,16 @@ py_wd_test("sdk")
 
 py_wd_test("seek-metadatafs")
 
-[
-    gen_import_tests(
-        PYTHON_IMPORTS_TO_TEST[info["packages"]],
-        python_version,
-        # TODO: The packages below don't currently work in the latest package/python versions. Need
-        # to fix them.
-        pkg_skip_versions = {
-            "0.28.0": [
-                "micropip",  # missing lockfile
-                "soupsieve",  # Circular dependency with beautifulsoup4
-                "langchain_openai",  # Problem with top level entropy
-            ],
-        },
-    )
-    for python_version, info in BUNDLE_VERSION_INFO.items()
-]
+gen_import_tests(
+    pkg_skip_versions = {
+        "0.28.0": [
+            "micropip",  # missing lockfile
+            "soupsieve",  # Circular dependency with beautifulsoup4
+        ],
+    },
+)
+
+gen_rust_import_tests()
 
 py_wd_test("undefined-handler")
 
