--- a/deps/rust/crates/BUILD.thiserror-2.0.13.bazel
+++ b/deps/rust/crates/BUILD.thiserror-2.0.13.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "proc_macro2",
+    name = "thiserror",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -31,25 +31,26 @@ rust_library(
     ),
     crate_features = [
         "default",
-        "proc-macro",
-        "span-locations",
+        "std",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
+    proc_macro_deps = [
+        "@crates_vendor__thiserror-impl-2.0.13//:thiserror_impl",
+    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=thiserror",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.95",
+    version = "2.0.13",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.95//:build_script_build",
-        "@crates_vendor__unicode-ident-1.0.18//:unicode_ident",
+        "@crates_vendor__thiserror-2.0.13//:build_script_build",
     ],
 )
 
@@ -74,8 +75,7 @@ cargo_build_script(
     ),
     crate_features = [
         "default",
-        "proc-macro",
-        "span-locations",
+        "std",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -92,18 +92,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "proc-macro2",
+    pkg_name = "thiserror",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=proc-macro2",
+        "crate-name=thiserror",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.95",
+    version = "2.0.13",
     visibility = ["//visibility:private"],
 )
 
