--- a/deps/rust/crates/BUILD.derive_more-impl-2.0.1.bazel
+++ b/deps/rust/crates/BUILD.derive_more-impl-2.0.1.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 package(default_visibility = ["//visibility:public"])
 
 rust_proc_macro(
-    name = "derive_more",
+    name = "derive_more_impl",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -31,22 +31,23 @@ rust_proc_macro(
     crate_features = [
         "add",
         "add_assign",
+        "default",
     ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=derive_more",
+        "crate-name=derive_more-impl",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.99.20",
+    version = "2.0.1",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.95//:proc_macro2",
+        "@crates_vendor__proc-macro2-1.0.96//:proc_macro2",
         "@crates_vendor__quote-1.0.40//:quote",
         "@crates_vendor__syn-2.0.104//:syn",
     ],
