--- a/deps/rust/crates/BUILD.proc-macro2-1.0.96.bazel
+++ b/deps/rust/crates/BUILD.proc-macro2-1.0.96.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "thiserror",
+    name = "proc_macro2",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -31,26 +31,25 @@ rust_library(
     ),
     crate_features = [
         "default",
-        "std",
+        "proc-macro",
+        "span-locations",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
-    proc_macro_deps = [
-        "@crates_vendor__thiserror-impl-2.0.12//:thiserror_impl",
-    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=thiserror",
+        "crate-name=proc-macro2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.12",
+    version = "1.0.96",
     deps = [
-        "@crates_vendor__thiserror-2.0.12//:build_script_build",
+        "@crates_vendor__proc-macro2-1.0.96//:build_script_build",
+        "@crates_vendor__unicode-ident-1.0.18//:unicode_ident",
     ],
 )
 
@@ -75,7 +74,8 @@ cargo_build_script(
     ),
     crate_features = [
         "default",
-        "std",
+        "proc-macro",
+        "span-locations",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -92,18 +92,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "thiserror",
+    pkg_name = "proc-macro2",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=thiserror",
+        "crate-name=proc-macro2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.12",
+    version = "1.0.96",
     visibility = ["//visibility:private"],
 )
 
