--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -201,7 +201,7 @@ jobs:
 
       - name: Create and install workers-types package
         run: |
-          cp /tmp/test-types/oldest/* /tmp/test-types
+          cp /tmp/test-types/* /tmp/test-types
           cat > /tmp/test-types/package.json << EOF
           {
               "name": "@cloudflare/workers-types"
