Unrevert error serialization changes
Adds tests that verify that stacks are not preserved by default
across RPC boundaries, but are preserved when the caller indicates
that the scope is trusted.

--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -832,3 +832,12 @@ wd_test(
     args = ["--experimental"],
     data = ["tests/fetch-redirect-test.js"],
 )
+
+wd_test(
+    src = "tests/rpc-error-test.wd-test",
+    args = ["--experimental"],
+    data = [
+        "tests/rpc-error-test.js",
+        "tests/rpc-error-test.rpc.js",
+    ],
+)
