Adds an experimental option to always allow eval
This is for experimentation purposes only right now.

Also add onDynamicEval to IsolateObserver... Will
allow us to easily implement logging of eval usage.

--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -274,7 +274,9 @@ wd_cc_library(
     hdrs = ["observer.h"],
     visibility = ["//visibility:public"],
     deps = [
+        "//src/workerd/util:strong-bool",
         "@capnp-cpp//src/kj",
+        "@workerd-v8//:v8",
     ],
 )
 
