--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -820,3 +820,9 @@ wd_test(
     args = ["--experimental"],
     data = ["tests/streams-circ-ref-regression-test.js"],
 )
+
+wd_test(
+    src = "tests/experimental-eval-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/experimental-eval-test.js"],
+)
