--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -826,3 +826,9 @@ wd_test(
     args = ["--experimental"],
     data = ["tests/experimental-eval-test.js"],
 )
+
+wd_test(
+    src = "tests/fetch-redirect-test.wd-test",
+    args = ["--experimental"],
+    data = ["tests/fetch-redirect-test.js"],
+)
