[DO NOT LAND] Add module.stripTypeScriptTypes function
This is just experimental for now to show it in action.

--- a/src/workerd/api/node/BUILD.bazel
+++ b/src/workerd/api/node/BUILD.bazel
@@ -44,9 +44,11 @@ wd_cc_library(
     deps = [
         ":node-core",
         "//src/node",
+        "//src/rust/transpiler",
         "//src/workerd/io",
         "@capnp-cpp//src/kj/compat:kj-brotli",
         "@ncrypto",
+        "@workerd-cxx//kj-rs",
     ],
 )
 
