--- a/.bazelrc
+++ b/.bazelrc
@@ -206,7 +206,7 @@ build:asan --per_file_copt='external/v8@-DADDRESS_SANITIZER,-DLEAK_SANITIZER'
 #
 build:unix --workspace_status_command=./tools/unix/workspace-status.sh
 
-build:unix --cxxopt='-std=c++20' --host_cxxopt='-std=c++20'
+build:unix --cxxopt='-std=c++23' --host_cxxopt='-std=c++23'
 build:unix --@capnp-cpp//src/kj:libdl=True
 
 # Bazel uses CC to compile C and C++ actions, no need to define CXX.
@@ -383,11 +383,11 @@ build:release_windows --copt="-fstrict-aliasing"
 # Ref: https://github.com/llvm/llvm-project/issues/136481
 build:release_windows --per_file_copt=.*capnp/rpc\.c++@/clang:-O1
 
-build:windows --cxxopt='/std:c++20' --host_cxxopt='/std:c++20'
+build:windows --cxxopt='/std:c++23preview' --host_cxxopt='/std:c++23preview'
 build:windows --copt='/D_CRT_USE_BUILTIN_OFFSETOF' --host_copt='/D_CRT_USE_BUILTIN_OFFSETOF'
 build:windows --copt='/DWIN32_LEAN_AND_MEAN' --host_copt='/DWIN32_LEAN_AND_MEAN'
 build:windows --copt='-Wno-microsoft-unqualified-friend' --host_copt='-Wno-microsoft-unqualified-friend'
-# The `/std:c++20` argument is unused during BoringSSL compilation and we don't
+# The `/std:c++23preview` argument is unused during BoringSSL compilation and we don't
 # want a warning when compiling each file.
 build:windows --copt='-Wno-unused-command-line-argument' --host_copt='-Wno-unused-command-line-argument'
 
