--- a/src/workerd/server/tests/python/BUILD.bazel
+++ b/src/workerd/server/tests/python/BUILD.bazel
@@ -71,3 +71,5 @@ py_wd_test("workflow-entrypoint")
 py_wd_test("vendor_dir_compat_flag")
 
 py_wd_test("multiprocessing")
+
+py_wd_test("default-class-with-legacy-global-handlers")
