--- a/src/workerd/jsg/BUILD.bazel
+++ b/src/workerd/jsg/BUILD.bazel
@@ -21,6 +21,7 @@ wd_cc_library(
         ":jsg-core",
         ":memory-tracker",
         ":url",
+        "//src/rust/cxx-integration",
         "//src/workerd/util",
         "//src/workerd/util:sentry",
         "//src/workerd/util:thread-scopes",
@@ -44,11 +45,13 @@ wd_cc_library(
         ":exception",
         ":jsg-core",
         ":memory-tracker",
+        "//src/rust/cxx-integration",
         "//src/workerd/util",
         "//src/workerd/util:sentry",
         "//src/workerd/util:thread-scopes",
         "@capnp-cpp//src/kj",
         "@simdutf",
+        "@workerd-cxx//kj-rs",
         "@workerd-v8//:v8",
     ],
 )
