Implement checked queue
A wrapper around an std::list that implements
safety checks to ensure that queue queue is not
accessed incorrectly.

--- a/src/workerd/util/BUILD.bazel
+++ b/src/workerd/util/BUILD.bazel
@@ -69,6 +69,13 @@ wd_cc_library(
 )
 
 wd_cc_library(
+    name = "checked-queue",
+    hdrs = ["checked-queue.h"],
+    visibility = ["//visibility:public"],
+    deps = ["@capnp-cpp//src/kj"],
+)
+
+wd_cc_library(
     name = "mimetype",
     srcs = ["mimetype.c++"],
     hdrs = ["mimetype.h"],
@@ -320,4 +327,9 @@ kj_test(
     deps = [
         ":uuid",
     ],
+)
+
+kj_test(
+    src = "checked-queue-test.c++",
+    deps = [":checked-queue"],
 )
