Disable dns-nodejs-test
It's failing in CI.

--- a/src/workerd/api/node/tests/BUILD.bazel
+++ b/src/workerd/api/node/tests/BUILD.bazel
@@ -256,12 +256,13 @@ wd_test(
     }),
 )
 
-wd_test(
-    src = "dns-nodejs-test.wd-test",
-    args = ["--experimental"],
-    data = ["dns-nodejs-test.js"],
-    tags = ["requires-network"],
-)
+# TODO: Fix this and reenable it.
+# wd_test(
+#     src = "dns-nodejs-test.wd-test",
+#     args = ["--experimental"],
+#     data = ["dns-nodejs-test.js"],
+#     tags = ["requires-network"],
+# )
 
 js_binary(
     name = "net-nodejs-tcp-server",
