--- a/src/workerd/api/BUILD.bazel
+++ b/src/workerd/api/BUILD.bazel
@@ -84,6 +84,7 @@ wd_cc_library(
     deps = [
         "//src/workerd/io:compatibility-date_capnp",
         "//src/workerd/jsg",
+        "//src/workerd/util:checked-queue",
         "//src/workerd/util:uuid",
     ],
 )
